[metadata]
name = MockingBirdOnlyForUse
version = 0.0.2
author = Alex Newton
author_email = sharenfan222@gmail.com
description = MockingBirdOnlyForUse
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Diaosi1111/MockingBirdOnlyForUse
project_urls =
    Bug Tracker = https://github.com/Diaosi1111/MockingBirdOnlyForUse/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9,<3.11

[options.packages.find]
where = src